force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet__c/bofc__BOFC_Picklist_ValueSet__c.object-meta.xml
<CustomObject>
    <label>BOFC Picklist ValueSet</label>
    <nameField>
        <label>BOFC Object Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFC Picklist ValueSets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>