force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet__c/fields/bofc__Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>bofc__Active_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active/Inactive</label>
    <type>Checkbox</type>
</CustomField>