force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet__c/fields/bofc__fNames__c.field-meta.xml
<CustomField>
    <fullName>bofc__fNames__c</fullName>
    <label>fNames</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>