force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet__c/fields/bofc__Master_Label__c.field-meta.xml
<CustomField>
    <fullName>bofc__Master_Label__c</fullName>
    <label>Master Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>