force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet__c/fields/bofc__pFieldName__c.field-meta.xml
<CustomField>
    <fullName>bofc__pFieldName__c</fullName>
    <label>pFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>