force-app/main/default/objects/bofc__BOFC_Picklist_ValueSet__c/fields/bofc__Type__c.field-meta.xml
<CustomField>
    <fullName>bofc__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Global Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>